# control-plane

./: .gitignore  ADD_ON_SERVICES.md  ARCHITECTURE.md  BUILD_BRIEF.md  COMPETITIVE_RESEARCH_REPORT.md  COSTS_DASHBOARD_MVP_RUNBOOK.md  CURRENT_STATE.md  DECOMMISSION_PLAN.md  INTENT_CONTRACT.md  Makefile  PHASE12_DOCUMENT_WORKFLOWS_RUNBOOK.md  PHASE14_LANGFUSE_RUNBOOK.md  PHASE6_RAG_RUNBOOK.md  PHASE9_0_OPERATOR_DASHBOARD_RUNBOOK.md  PHASE_1_NOTES.md  PIVOT_TO_PAPERCLIP.md  PLATFORM_READINESS.md  README.md  ROADMAP.md  RUNBOOK.md  WORKFLOWS.md
api-gateway/: Dockerfile  alembic.ini  pyproject.toml
api-gateway/app/: cli.py  main.py
api-gateway/app/auth/: claims.py  keys.py
api-gateway/app/db/: models.py  session.py
api-gateway/app/ratelimit/: bucket.py
api-gateway/app/routes/: intent.py
api-gateway/migrations/: README  env.py
api-gateway/migrations/versions/: a1b2c3d4e5f6_create_api_keys_and_audit_log.py
api-gateway/tests/: test_gateway.py
paperclipai/: Dockerfile  Procfile  alembic.ini  pyproject.toml
paperclipai/app/: events.py  main.py  tool_registry.py
paperclipai/app/api/: intent.py
paperclipai/app/contracts/: __init__.py  execution_instruction.py  intent.py  tool_output.py  workflow_plan.py
paperclipai/app/db/: models.py  session.py
paperclipai/app/mcp_client/: client.py
paperclipai/app/middleware/: claims.py
paperclipai/app/orchestration/: callback.py  planner.py  worker.py
paperclipai/migrations/: env.py
paperclipai/migrations/versions/: c4d24c2a3f89_create_contracts_and_intents_tables.py  (+1 more)
paperclipai/tests/: conftest.py  test_alembic.py  test_claims_middleware.py  test_docker_health.py  test_echo_mcp.py  test_intent_api.py  test_mcp_client.py  test_orchestration.py  test_schema_roundtrip.py  test_sse.py
(+83 files in other folders)
